# tihi

./: ..pypirc.un~  .pypirc  .pypirc~  .readthedocs.yaml  .setup.py.un~  LICENSE  README.md  pyproject.toml  requirements  requirements.txt  setup.py  setup.py~
.github/workflows/: ci.yml
data/: IR.txt  ariadni.txt  result_ariadni.txt
data/abelsonite_IR/: abelsonite_gaussian_parameters  abelsonite_processed.txt
data/sample_1/: IR_1.txt  gaussian_parameters  lorentzian_parameters.txt
docs/: CNAME  conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst
docs/source/tihi/: app.rst  index.rst
jupyter_notebooks/: distribution_fitting_tutorial.ipynb  peak_detection_tutorial.ipynb
paper/: gui_peak_tutorial.aux  gui_peak_tutorial.bbl  gui_peak_tutorial.blg  gui_peak_tutorial.fdb_latexmk  gui_peak_tutorial.fls  gui_peak_tutorial.out  gui_peak_tutorial.tex  pythonhighlight.sty  references.bib
paper/images/: abelsonite_gaussian_parameters.txt
src/: .app.py.un~  app.py  app.py~  tutorial.ipynb  wizard.py
src/tihi/: app.py  wizard.py
src/tihi/tests/: test_baseline_correction.py  test_baseline_page.py  test_distribution_page.py  test_distributions.py  test_interpolate.py  test_peaks.py
src/tihi/tihi_utils/: __init__.py  baseline_corrector.py  distributions.py  (+2 more)
src/utils/: cauchy.py  distributions.py  fitter.py  gauss.py  interpolate.py  peak_detection.py
src/wizardPages/: baselinePage.py  distributionPage.py  interpolatePage.py  peak_detectionPage.py
tutorials/: detrending_tutorial.ipynb  distribution_fitting_tutorial.ipynb  utils.py
(+13 files in other folders)
